<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="reset">Reset</string>
    <string name="reserve">Reserve</string>
    <string name="smoking">Smoking</string>
    <string name="no_of_people">No. of People</string>
    <string name="no_of_people_View">No. of People</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="number">Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="reservation">Reservation:</string>
</resources>